# CopperSpice

./: .gitignore  CMakeLists.txt
cmake/modules/: ParseAndAddCatchTests.cmake  ResourceMacros.cmake
src/core/: CMakeLists.txt
src/declarative/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/image/: image.cmake
src/gui/text/: text.cmake
src/opengl/: CMakeLists.txt
src/plugins/multimedia/mediaservices/avfoundation/: avfoundation.cmake
src/plugins/multimedia/mediaservices/gstreamer/: gstreamer.cmake
src/script/: CMakeLists.txt
src/svg/: CMakeLists.txt
src/tools/lconvert/: CMakeLists.txt
src/tools/linguist/: CMakeLists.txt
src/tools/lrelease/: CMakeLists.txt
src/tools/lupdate/: CMakeLists.txt
src/tools/shared/: CMakeLists.txt
src/webkit/: CMakeLists.txt
